--- a/src/main/resources/assets/jewelry/lang/ko_kr.json
+++ b/src/main/resources/assets/jewelry/lang/ko_kr.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.jewelry.generic": "Jewelry",
+  "itemGroup.jewelry.generic": "장신구 (RPG 시리즈)",
   "block.jewelry.gem_vein": "보석 광맥",
   "block.jewelry.deepslate_gem_vein": "심층암 보석 광맥",
   "block.jewelry.jewelers_kit": "보석공의 도구",
