Restore villager trades

--- a/src/main/resources/assets/jewelry/lang/en_us.json
+++ b/src/main/resources/assets/jewelry/lang/en_us.json
@@ -17,6 +17,7 @@
   "item.jewelry.copper_ring": "Copper Ring",
   "item.jewelry.iron_ring": "Iron Ring",
   "item.jewelry.gold_ring": "Gold Ring",
+  "item.jewelry.gold_ring.lore": "Shows affection to your loved one.",
   "item.jewelry.emerald_necklace": "Emerald Necklace",
   "item.jewelry.diamond_necklace": "Diamond Necklace",
 
