translation pt-br

--- a/src/main/resources/assets/jewelry/lang/pt_br.json
+++ b/src/main/resources/assets/jewelry/lang/pt_br.json
@@ -1,7 +1,7 @@
 {
   "itemGroup.jewelry.generic": "Joias",
   "block.jewelry.gem_vein": "Veia de gema",
-  "block.jewelry.deepslate_gem_vein": "Veia de gema de ardósia profunda",
+  "block.jewelry.deepslate_gem_vein": "Veia de gema de ardósia",
   "block.jewelry.jewelers_kit": "Kit de joalheiro",
   "block.jewelry.jewelers_kit.hint": "Banco de trabalho para aldeões joalheiros.",
 
@@ -34,18 +34,18 @@
   "item.jewelry.sapphire_necklace": "Colar de safira",
   "item.jewelry.tanzanite_necklace": "Colar de tanzanita",
 
-  "item.jewelry.netherite_ruby_ring": "Anel de rubi de netherite",
-  "item.jewelry.netherite_topaz_ring": "Anel de topázio de netherite",
-  "item.jewelry.netherite_citrine_ring": "Anel de citrino de netherite",
-  "item.jewelry.netherite_jade_ring": "Anel de jade de netherite",
-  "item.jewelry.netherite_sapphire_ring": "Anel de safira de netherite",
-  "item.jewelry.netherite_tanzanite_ring": "Anel de tanzanita de netherite",
-  "item.jewelry.netherite_ruby_necklace": "Colar de rubi de netherite",
-  "item.jewelry.netherite_topaz_necklace": "Colar de topázio de netherite",
-  "item.jewelry.netherite_citrine_necklace": "Colar de citrino de netherite",
-  "item.jewelry.netherite_jade_necklace": "Colar de jade de netherite",
-  "item.jewelry.netherite_sapphire_necklace": "Colar de safira de netherite",
-  "item.jewelry.netherite_tanzanite_necklace": "Colar de tanzanita de netherite",
+  "item.jewelry.netherite_ruby_ring": "Anel de rubi de netherita",
+  "item.jewelry.netherite_topaz_ring": "Anel de topázio de netherita",
+  "item.jewelry.netherite_citrine_ring": "Anel de citrino de netherita",
+  "item.jewelry.netherite_jade_ring": "Anel de jade de netherita",
+  "item.jewelry.netherite_sapphire_ring": "Anel de safira de netherita",
+  "item.jewelry.netherite_tanzanite_ring": "Anel de tanzanita de netherita",
+  "item.jewelry.netherite_ruby_necklace": "Colar de rubi de netherita",
+  "item.jewelry.netherite_topaz_necklace": "Colar de topázio de netherita",
+  "item.jewelry.netherite_citrine_necklace": "Colar de citrino de netherita",
+  "item.jewelry.netherite_jade_necklace": "Colar de jade de netherita",
+  "item.jewelry.netherite_sapphire_necklace": "Colar de safira de netherita",
+  "item.jewelry.netherite_tanzanite_necklace": "Colar de tanzanita de netherita",
 
   "item.jewelry.unique_attack_ring": "Anel da fúria",
   "item.jewelry.unique_attack_ring.lore": "Um pedaço quebrado de ônix, reutilizado de forma rudimentar.",
@@ -77,8 +77,8 @@
   "item.jewelry.unique_fire_necklace": "Pendente do fogo solar",
   "item.jewelry.unique_fire_necklace.lore": "Presente antigo do Terraço do Magister.",
 
-  "item.jewelry.unique_frost_ring": "Pedra de permafrost",
-  "item.jewelry.unique_frost_ring.lore": "Os tempos mudam, mas esta peça permanece.",
+  "item.jewelry.unique_frost_ring": "Anel de permafrost",
+  "item.jewelry.unique_frost_ring.lore": "Os tempos mudam, mas esta pedra permanece.",
   "item.jewelry.unique_frost_necklace": "Fragmento glacial",
   "item.jewelry.unique_frost_necklace.lore": "Bordas incomumente afiadas, mas se sente suave ao toque.",
 
